[package]
name = "gvarpy"
version = "0.1.0"
edition = "2024"
authors = ["lakshminarasimman <lakshminarasimman.v17@gmail.com>"]
description = "Google's Group Varint encoding library with Python bindings"
repository = "https://github.com/gideonphilip/gvarpy"
license = "MIT OR Apache-2.0"
keywords = ["compression", "encoding", "group-varint"]
categories = ["compression", "encoding"]

[lib]
name = "gvarpy"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24.2", features = ["extension-module"] }
thiserror = "1.0"
smallvec = "1.15.0"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.6.0"

[features]
default = ["python"]
python = ["pyo3/extension-module"]
simd = []

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
